--- a/Checkers.UI2/Views/Home/Index.cshtml
+++ b/Checkers.UI2/Views/Home/Index.cshtml
@@ -1,35 +1,30 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Checkers Game";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to Checkers</h1>
 </div>
-<div class="container">
-    <div class="row p-1">
-        <div class="col-1">User</div>
-        <div class="col-5"><input type="text" id="userInput" /></div>
-    </div>
-    <div class="row p-1">
-        <div class="col-1">Message</div>
-        <div class="col-5"><input type="text" class="w-100" id="messageInput" /></div>
-    </div>
-    <div class="row p-1">
-        <div class="col-6 text-end">
-            <input type="button" id="sendButton" value="Send Message" />
+<hr />
+<div id="checkerboard">
+    @for (int i = 0; i < 8; i++)
+    {
+        <div class="row">
+            @for (int j = 0; j < 8; j++)
+            {
+                <div class="cell">
+                    @if ((i < 3 && (i + j) % 2 == 0))
+                    {
+                        <div class="piece player1"></div>
+                    }
+                    else if (i > 4 && (i + j) % 2 == 0)
+                    {
+                        <div class="piece player2"></div>
+                    }
+                </div>
+            }
         </div>
-    </div>
-    <div class="row p-1">
-        <div class="col-6">
-            <hr />
-        </div>
-    </div>
-    <div class="row p-1">
-        <div class="col-6">
-            <ul id="messagesList"></ul>
-        </div>
-    </div>
+    }
 </div>
 <script src="~/js/signalr/dist/browser/signalr.js"></script>
-<script src="~/js/chat.js"></script>
+<script src="~/js/game.js"></script>
