--- a/Checkers.UI2/wwwroot/css/site.css
+++ b/Checkers.UI2/wwwroot/css/site.css
@@ -1,22 +1,77 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
 }
+
+#checkerboard {
+    width: 480px;
+    height: 480px;
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+}
+
+.row {
+    display: contents;
+}
+
+.cell {
+    width: 60px;
+    height: 60px;
+}
+
+.row:nth-child(odd) .cell:nth-child(odd) {
+    background: white;
+}
+
+.row:nth-child(odd) .cell:nth-child(even),
+.row:nth-child(even) .cell:nth-child(odd) {
+    background: black;
+}
+
+.row:nth-child(even) .cell:nth-child(even) {
+    background: white;
+}
+
+.piece {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.player1 {
+    background: gray;
+}
+
+.player2 {
+    background: red;
+}
+
+.king::after {
+    content: 'K';
+    color: white;
+    text-align: center;
+    display: block;
+}
+
