--- a/Checkers.UI2/wwwroot/css/site.css
+++ b/Checkers.UI2/wwwroot/css/site.css
@@ -60,6 +60,16 @@ body {
     transform: translate(-50%, -50%);
 }
 
+.piece-outline {
+    border: solid;
+    border-width: 2px;
+    border-color: green;
+}
+
+.piece-no-outline {
+    border: none;   
+}
+
 .player1 {
     background: gray;
 }
