--- a/Checkers.UI.Final/Views/Game/Index.cshtml
+++ b/Checkers.UI.Final/Views/Game/Index.cshtml
@@ -18,6 +18,9 @@
                 <th>
                     @Html.DisplayNameFor(model => model.Winner)
                 </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.GameDate)
+                </th>
                 <th></th>
             </tr>
         </thead>
@@ -30,6 +33,12 @@
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Winner)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.GameDate)
+                    </td>
+                    <td>
+                        <a class="btn btn-success btn-sm" asp-action="Details" asp-route-id="@item.Id">View</a>
                     </td>
                     @* <td class="text-right">
                         <a class="btn btn-success btn-sm" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
