--- a/Checkers.UI.Final/Views/User/Create.cshtml
+++ b/Checkers.UI.Final/Views/User/Create.cshtml
@@ -26,10 +26,16 @@
                     <span asp-validation-for="UserName" class="text-danger"></span>
                 </div>
                 <div class="form-group">
+                    <label asp-for="NickName" class="control-label"></label>
+                    <input asp-for="NickName" class="form-control" />
+                    <span asp-validation-for="NickName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
                     <label asp-for="Password" class="control-label"></label>
                     <input asp-for="Password" class="form-control" />
                     <span asp-validation-for="Password" class="text-danger"></span>
                 </div>
+                <br />
                 <div class="form-group">
                     <input type="submit" value="Create" class="btn btn-success btn-sm" />
                     <a class="btn btn-success btn-sm" asp-action="Index">Back to List</a>
