--- a/Checkers.UI.Final/Views/User/Index.cshtml
+++ b/Checkers.UI.Final/Views/User/Index.cshtml
@@ -38,9 +38,9 @@
                         @Html.DisplayFor(modelItem => item.UserName)
                     </td>
                     <td class="text-right">
-                        <a class="btn btn-success btn-sm" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                        @* <a class="btn btn-success btn-sm" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
                         <a class="btn btn-success btn-sm" asp-action="Details" asp-route-id="@item.Id">Details</a>
-                        <a class="btn btn-success btn-sm" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                        <a class="btn btn-success btn-sm" asp-action="Delete" asp-route-id="@item.Id">Delete</a> *@
                     </td>
 
                 </tr>
