--- a/Checkers.UI.Final/wwwroot/css/site.css
+++ b/Checkers.UI.Final/wwwroot/css/site.css
@@ -20,3 +20,28 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+table {
+    border: 1px solid #355E3B;
+    border-collapse: collapse;
+}
+
+th, td {
+    border: none !important;
+    padding: 4px;
+}
+
+
+table thead tr {
+    color: white;
+    background-color: #355E3B;
+}
+
+table tbody tr:nth-child(odd) {
+    background-color: lightcoral;
+}
+
+
+table.dataTable tbody tr.odd {
+    background-color: lightcoral;
+}
