--- a/Checkers.UI.Final/Views/Game/Create.cshtml
+++ b/Checkers.UI.Final/Views/Game/Create.cshtml
@@ -12,14 +12,10 @@
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="Name" class="control-label"></label>
-                    @* <input asp-for="FirstName" class="form-control" />
-                    <span asp-validation-for="FirstName" class="text-danger"></span> *@
+                    <input asp-for="Name" class="form-control" />
+                    <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
-                <div class="form-group">
-                    <label asp-for="Name" class="control-label"></label>
-                    @* <input asp-for="LastName" class="form-control" />
-                    <span asp-validation-for="LastName" class="text-danger"></span> *@
-                </div>
+                <br />
                 <div class="form-group">
                     <input type="submit" value="Create" class="btn btn-success btn-sm" />
                     <a class="btn btn-success btn-sm" asp-action="Index">Back to List</a>
