--- a/Checkers.UI.Final/wwwroot/css/site.css
+++ b/Checkers.UI.Final/wwwroot/css/site.css
@@ -45,3 +45,38 @@ table tbody tr:nth-child(odd) {
 table.dataTable tbody tr.odd {
     background-color: lightcoral;
 }
+
+.row {
+    display: flex;
+}
+
+.cell {
+    width: 100px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.white {
+    background-color: white;
+}
+
+.black {
+    background-color: black;
+}
+
+.piece {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    position: relative;
+}
+
+.red {
+    background-color: red;
+}
+
+.black {
+    background-color: black;
+}
