Centered checker board

--- a/Checkers.UI.Final/Views/Home/Index.cshtml
+++ b/Checkers.UI.Final/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
 
 <br />
 
-<div id="gameBoard" style="display: none;">
+<div id="gameBoard" style="display: none; margin: 0 auto; width: 800px;">
     <div id="board">
         @for (var i = 0; i < 8; i++)
         {
